splash screen feature is added

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,7 +19,7 @@
         app:navGraph="@navigation/mobile_navigation">
 
         <ProgressBar
-            android:id="@+id/progress_circular"
+            android:id="@+id/progress_bar"
             style="@style/Widget.AppCompat.ProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
